# FairGraph2FairData

./: README.md  pyproject.toml
ExistingBiasMitigationMethods/: 1_Calculate_Reweighing.py  2_Calculate_Disparate_Impact_Remover.py  3_Calculate_Learning_Fair_Representation.py  4_Calculate_Fairness_Metric_Mean_Difference.py  ml_model_dir.py  ml_model_lfr.py  ml_model_reweighing.py  utility.py
ExistingBiasMitigationMethods/results/: mean_difference_extended_paper_20250225.csv  preprocessing_disparateimpactremover_20240908.csv  preprocessing_learning_fair_representation_20240908.csv  preprocessing_reweighing_20240305.csv  preprocessing_reweighing_20240908.csv
FairnessAwareHC/base/: DAG.py  UndirectedGraph.py
FairnessAwareHC/estimators/: BayesianEstimator.py  CITests.py  EM.py  FairnessAwareHillClimbSearch.py  MLE.py  ScoreCache.py  StructureScore.py  TreeSearch.py  __init__.py  base.py
FairnessAwareHC/factors/: FactorSet.py
FairnessAwareHC/models/: BayesianModel.py  BayesianNetwork.py  ClusterGraph.py  DynamicBayesianNetwork.py  FactorGraph.py  JunctionTree.py  LinearGaussianBayesianNetwork.py  MarkovChain.py  MarkovModel.py  NaiveBayes.py  NoisyOrModel.py  SEM.py
FairnessAwareHC/sampling/: HMC.py  NUTS.py  Sampling.py  base.py
data/data_compas/: compas_final.csv
data/data_law_school/: law_school_clean_processed.csv
data/data_taiwan_credit/: credit-card-clients.csv
experiments/: 99_Draw_Expriment_Results_for_Extended_Paper.ipynb  Compiled_Experiment_Results.xlsx  run_ml_models.py
experiments/adult/: 1_fairness_aware_HC_algorithm_adult.py  (+1 more)
(+598 files in other folders)
